<resources>
    <string name="app_name">Community Car GPS</string>
    <string name="action_settings">Settings</string>
    <string name="locate">Locate</string>
    <string name="provider_enabled">The provider %s is now enabled</string>
    <string name="provider_disabled">The provider %s is now disabled</string>
    <string name="provider_new_status">The provider %1$s has now a new status %2$s</string>
    <string name="provider">Provider : </string>
    <string name="gps">GPS : </string>
    <string name="title_activity_settings">Settings</string>
    <string name="setting_distanceText">Distance : </string>
    <string name="setting_tempsDonnee">Temps avant expiration : </string>
    <string name="button_reset">Remettre à zéro</string>
    <string name="button_save">Enregistrer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_login">Le login est invalide</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Se champs est nécessaire</string>
    <string name="password">Mot de passe</string>
    <string name="login">Login</string>
    <string name="setting">Settings</string>
    <string name="error_incorrect_login">Le login est incorrect</string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Ce champs est nécessaire</string>
</resources>
